--- a/style.css
+++ b/style.css
@@ -208,7 +208,60 @@ hr {
   padding: 2rem;
   font-weight: 700;
 }
+/* Speakers section */
 
+.speakers {
+  display: flex;
+  margin-top: 3rem;
+  justify-content: center;
+  gap: 1rem;
+  padding-bottom: 2rem;
+}
+.featured-speakers {
+  font-size: 2.8rem;
+  color: #272a31;
+  text-align: center;
+}
+.bg-chess {
+  width: 15%;
+  position: absolute;
+  z-index: 1;
+  margin-top: -1rem;
+  margin-left: 0.5rem;
+}
+.presenters {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.speakers-img {
+  z-index: 2;
+  position: relative;
+  margin-left: 1.5rem;
+}
+.speakers-text {
+  font-size: 1.8rem;
+}
+.speaker-name {
+  font-size: 1.8rem;
+}
+.speaker-title {
+  color: #ec5241;
+  font-size: 1.4rem;
+}
+.speaker-description {
+  font-size: 1.4rem;
+  width: 90%;
+  margin-top: 1rem;
+}
+.hr {
+  background-color: #d3d3d3;
+  border: 1px solid #d3d3d3;
+  width: 10%;
+  margin-top: 0.5rem;
+}
 /* Partner section */
 .partners-section {
   background-color: rgb(91, 91, 91);
